add flyway to project