@@ -10,7 +10,7 @@
 
     <parent>
         <groupId>org.springframework.boot</groupId>
-        <version>3.1.3</version>
+        <version>3.3.5</version>
         <artifactId>spring-boot-starter-parent</artifactId>
         <relativePath />
     </parent>
@@ -22,7 +22,9 @@
         <spribngframework.version>3.3.5</spribngframework.version>
         <springdoc.version>2.2.0</springdoc.version>
         <h2.version>2.1.214</h2.version>
+        <flyway.version>10.20.1</flyway.version>
         <lombok.version>1.18.30</lombok.version>
+        <maven-surefire-plugin.version>3.5.1</maven-surefire-plugin.version>
     </properties>
 
     <dependencies>
@@ -40,6 +42,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>${spribngframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
             <version>${spribngframework.version}</version>
@@ -49,6 +57,12 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version>
         </dependency>
 
         <dependency>
@@ -64,7 +78,18 @@
             <version>${h2.version}</version>
         </dependency>
 
-
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
